Opened 13 years ago
Closed 13 years ago
#8374 closed bug (fixed)
BTabView::SetTabHeight broken?
Reported by: | cipri | Owned by: | anevilyak |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Kits/Interface Kit | Version: | R1/Development |
Keywords: | BTabView | Cc: | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
Behaviour: I call SetTabHeight(50) for example, the tab resizes correctly (becoming bigger in that case) and the "DrawBox" too, which becomes smaller, like it should. But after an "invalidation", for example changing the size of the window, the Tab height keeps being big as it should, but the "DrawBox" moves back to its old place, like it would not notice/know that the fTabHeight became bigger. That means the "DrawBox" is covering partially the Tab and not staying below the tab.
Is it possible that someone solves it soon, because i need that it is working by monday/tuesday (since i will make a new release of documentviewer on tuesday)?
Change History (3)
comment:1 by , 13 years ago
comment:2 by , 13 years ago
Owner: | changed from | to
---|---|
Status: | new → in-progress |
Version: | R1/alpha3 → R1/Development |
You may want to look into it then yourself: it's probably an oversight in the BTabView's layout code. If you attach a patch in time, I'm sure someone could apply it in time.