When changing the tab height, also update the layout insets if needed.

Fixes #8374.